first working unit test; a basic lexer for parsing all of the CLI arguments

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .cache
 
-subprojects/packagecache
-subprojects/fmt-*
+subprojects/Catch2-*
 subprojects/CLI11-*
+subprojects/fmt-*
+subprojects/packagecache
