--- a/meson.build
+++ b/meson.build
@@ -7,36 +7,44 @@ version = meson.project_version()
 
 conf_data = configuration_data()
 
+# organise the dependencies
 sqlite3_dep = dependency('sqlite3')
 
-cli11 = subproject('cli11', default_options: 'default_library=static')
-cli11_dep = cli11.get_variable('CLI11_dep')
+cli11_dep = subproject('cli11', default_options: 'default_library=static').get_variable('CLI11_dep')
+fmt_dep   = subproject('fmt', default_options: 'default_library=static').get_variable('fmt_dep')
+catch_dep = subproject('catch2').get_variable('catch2_with_main_dep')
 
-fmt = subproject('fmt', default_options: 'default_library=static')
-fmt_dep = fmt.get_variable('fmt_dep')
+# the common implementation
+lib_src = ['src/uenv/lex.cpp']
+lib_inc = include_directories('src')
 
+lib_dep = declare_dependency(
+        sources: lib_src,
+        dependencies: [sqlite3_dep, fmt_dep],
+        include_directories: lib_inc
+)
+
+# the uenv executable
 uenv_src = ['src/uenv.cpp', 'src/start.cpp']
 uenv_inc = include_directories('include')
 uenv_dep = [sqlite3_dep]
 
 uenv = executable('uenv',
-              sources: uenv_src,
-              dependencies: [uenv_dep, fmt_dep, cli11_dep],
-              c_args: ['-DVERSION="@0@"'.format(version)],
-              install: true)
+        sources: uenv_src,
+        dependencies: [uenv_dep, lib_dep, fmt_dep, cli11_dep],
+        c_args: ['-DVERSION="@0@"'.format(version)],
+        install: true)
 
-#unit_inc = include_directories('external/catch2')
 
-#unit_src = ['external/catch2/catch_amalgamated.cpp',
-#'tests/unit/parse_args.cpp',
-#'tests/unit/strings.cpp',]
-#unit_src += lib_src
+unit_src = [
+        'test/unit/lex.cpp',
+        'test/unit/main.cpp',
+]
 
-#unit = executable('unit',
-#sources: unit_src,
-#include_directories: [unit_inc, module_inc],
-#dependencies: module_dep,
-#build_by_default: true,
-#install: false)
+unit = executable('unit',
+        sources: unit_src,
+        dependencies: [catch_dep, lib_dep],
+        build_by_default: true,
+        install: false)
 
 
