--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('uenv', ['cpp'],
         default_options : [
-          'cpp_std=c++17',
+          'cpp_std=c++23',
           'default_library=static',
         ],
         version: files('VERSION'),
@@ -24,6 +24,7 @@ sqlite3_dep = subproject('sqlite3', default_options: 'werror=false').get_variabl
 # the lib dependency is all of the common funtionality shared between the CLI
 # and the slurm plugin.
 lib_src = [
+        'src/uenv/datastore.cpp',
         'src/uenv/env.cpp',
         'src/uenv/envvars.cpp',
         'src/uenv/lex.cpp',
