--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,2 @@
-option('slurm_plugin', type: 'boolean', value: false)
+option('slurm_plugin', type: 'boolean', value: true)
+option('cli', type: 'boolean', value: true)
