add image ls command

--- a/meson.build
+++ b/meson.build
@@ -49,6 +49,8 @@ lib_dep = declare_dependency(
 # the uenv executable
 if uenv_cli
     uenv_src = [
+            'src/cli/image.cpp',
+            'src/cli/ls.cpp',
             'src/cli/run.cpp',
             'src/cli/start.cpp',
             'src/cli/uenv.cpp',
