--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Update apt repositories for ccache
         run: sudo apt update
       - name: Install dependencies
-        run: sudo apt-get install util-linux libmount-dev slurm-wlm
+        run: sudo apt-get install util-linux libmount-dev slurm-wlm libslurm-dev slurmd slurmctld slurm-client
       - name: Set up ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
