--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update apt repositories for ccache
         run: sudo apt update
+      - name: Install dependencies
+        run: sudo apt-get install util-linux libmount-dev slurm-wlm libslurm-dev slurmd slurmctld slurm-client
       - name: Set up ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
