fix relative path in unit tests

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -33,5 +33,7 @@ jobs:
               build .
       - name: Build
         run: ninja -C build
+      - name: Setup Test
+        run: cd test/setup && ./setup
       - name: Test
         run: ./build/unit
