run tests from the path where they are installed

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Setup Test
         run: cd test/setup && ./setup
       - name: Test
-        run: ./build/unit
+        run: cd build && ./unit
