add config.h with version information

--- a/meson.build
+++ b/meson.build
@@ -46,6 +46,8 @@ lib_dep = declare_dependency(
         include_directories: lib_inc
 )
 
+subdir('src/uenv')
+
 # the uenv executable
 if uenv_cli
     uenv_src = [
