Add help and color output. (#9)

--- a/meson.build
+++ b/meson.build
@@ -51,6 +51,8 @@ subdir('src/uenv')
 # the uenv executable
 if uenv_cli
     uenv_src = [
+            'src/cli/color.cpp',
+            'src/cli/help.cpp',
             'src/cli/image.cpp',
             'src/cli/ls.cpp',
             'src/cli/run.cpp',
