--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 
 subprojects/Catch2-*
 subprojects/CLI11-*
+subprojects/curl-*
 subprojects/fmt-*
 subprojects/packagecache
 subprojects/spdlog-*
 subprojects/sqlite-amalgamation-*
 subprojects/nlohmann_json-*
+
+install
