--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,8 @@ project('uenv', ['cpp'],
         default_options : [
           'cpp_std=c++20',
           'default_library=static',
+          'werror=true',
+          'warning_level=3',
         ],
         version: files('VERSION'),
         meson_version: '>=0.57')
@@ -11,6 +13,8 @@ uenv_slurm_plugin = get_option('slurm_plugin')
 uenv_cli = get_option('cli')
 
 conf_data = configuration_data()
+
+add_global_arguments('-Wno-missing-field-initializers', language : 'cpp')
 
 # configure the dependencies
 
