add pull scaffold, util find current exe and oras

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,8 @@ project('uenv', ['cpp'],
         meson_version: '>=0.57')
 version = meson.project_version()
 
+oras_version = get_option('oras_version')
+
 uenv_slurm_plugin = get_option('slurm_plugin')
 uenv_cli = get_option('cli')
 
@@ -39,9 +41,12 @@ lib_src = [
         'src/uenv/lex.cpp',
         'src/uenv/log.cpp',
         'src/uenv/meta.cpp',
+        'src/uenv/oras.cpp',
         'src/uenv/parse.cpp',
+        'src/uenv/print.cpp',
         'src/uenv/repository.cpp',
         'src/uenv/uenv.cpp',
+        'src/util/color.cpp',
         'src/util/curl.cpp',
         'src/util/fs.cpp',
         'src/util/shell.cpp',
@@ -62,13 +67,12 @@ subdir('src/uenv')
 if uenv_cli
     uenv_src = [
             'src/cli/add_remove.cpp',
-            'src/cli/color.cpp',
             'src/cli/find.cpp',
             'src/cli/help.cpp',
             'src/cli/image.cpp',
             'src/cli/inspect.cpp',
             'src/cli/ls.cpp',
-            'src/cli/print.cpp',
+            'src/cli/pull.cpp',
             'src/cli/repo.cpp',
             'src/cli/run.cpp',
             'src/cli/start.cpp',
@@ -81,6 +85,24 @@ if uenv_cli
             dependencies: [uenv_dep, lib_dep, fmt_dep, spdlog_dep, cli11_dep],
             c_args: ['-DVERSION="@0@"'.format(version)],
             install: true)
+
+    oras_url = 'https://github.com/oras-project/oras/releases/download/v@0@/oras_@0@_linux_amd64.tar.gz'.format(oras_version)
+
+    oras_download = custom_target(
+        'oras-download',
+        output: 'oras.tar.gz',
+        command: ['curl', '-L', oras_url, '-o', '@OUTPUT@'],
+        install: false,
+    )
+
+    oras_extract = custom_target(
+        'oras-extract',
+        input: oras_download,
+        output: 'oras',
+        command: ['tar', 'xf', '@INPUT@', 'oras'],
+        install: true,
+        install_dir: get_option('libexecdir'),
+    )
 endif
 
 unit_src = [
