add image delete from remote registry feature

--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ if uenv_cli
     uenv_src = [
             'src/cli/add_remove.cpp',
             'src/cli/copy.cpp',
+            'src/cli/delete.cpp',
             'src/cli/find.cpp',
             'src/cli/help.cpp',
             'src/cli/image.cpp',
