--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,6 @@
+option('tests', type: 'feature', value: 'disabled')
+
 option('slurm_plugin', type: 'boolean', value: true)
 option('cli', type: 'boolean', value: true)
+
 option('oras_version', type: 'string', value: '1.2.0')
