--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -27,11 +27,18 @@ jobs:
         uses: hendrikmuhs/ccache-action@v1.2
         with:
           key: ccache-linux-${{ matrix.buildtype }}-${{ matrix.sanitizer }}
-      - name: Setup compiler and build tools
-        run: sudo apt install --no-install-recommends --yes g++-12 meson ninja-build
+      - name: Install compiler and build tools
+        run: sudo apt install --no-install-recommends --yes g++-12 ninja-build
+        #run: sudo apt install --no-install-recommends --yes g++-12 meson ninja-build
+      - name: install meson
+        run: |
+          wget https://github.com/mesonbuild/meson/releases/download/1.6.1/meson-1.6.1.tar.gz && \
+          tar -xzf meson-1.6.1.tar.gz && \
+          mv meson-1.6.1 meson && \
+          mv meson/meson.py meson/meson
       - name: Configure
         run: |
-            CXX="ccache g++-12" meson setup \
+            CXX="ccache g++-12" PATH=$(pwd)/meson:$PATH meson setup \
               --buildtype ${{ matrix.buildtype }} \
               -Db_sanitize=${{ matrix.sanitizer }} \
               -Dtests=enabled \
